terraform/network.tf
data "aws_availability_zones" "available" {
  state = "available"
}

locals {
  az1 = data.aws_availability_zones.available.names[0]
  az2 = data.aws_availability_zones.available.names[1]
}

resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = { Name = "${var.project_name}-vpc" }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags = { Name = "${var.project_name}-igw" }
}

resource "aws_subnet" "public_a" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.20.1.0/24"
  availability_zone = local.az1
  map_public_ip_on_launch = true
  tags = { Name = "${var.project_name}-public-a", Tier = "public" }
}

resource "aws_subnet" "public_b" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.20.2.0/24"
  availability_zone = local.az2
  map_public_ip_on_launch = true
  tags = { Name = "${var.project_name}-public-b", Tier = "public" }
}

resource "aws_subnet" "app_a" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.20.11.0/24"
  availability_zone = local.az1
  tags = { Name = "${var.project_name}-app-a", Tier = "application" }
}

resource "aws_subnet" "app_b" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.20.12.0/24"
  availability_zone = local.az2
  tags = { Name = "${var.project_name}-app-b", Tier = "application" }
}

resource "aws_subnet" "db_a" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.20.21.0/24"
  availability_zone = local.az1
  tags = { Name = "${var.project_name}-db-a", Tier = "database" }
}

resource "aws_subnet" "db_b" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.20.22.0/24"
  availability_zone = local.az2
  tags = { Name = "${var.project_name}-db-b", Tier = "database" }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route { cidr_block = "0.0.0.0/0", gateway_id = aws_internet_gateway.igw.id }
  tags = { Name = "${var.project_name}-public-rt" }
}

resource "aws_route_table_association" "public_a" {
  subnet_id = aws_subnet.public_a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_b" {
  subnet_id = aws_subnet.public_b.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "app" {
  vpc_id = aws_vpc.main.id
  tags = { Name = "${var.project_name}-app-rt" }
}

resource "aws_route_table_association" "app_a" {
  subnet_id = aws_subnet.app_a.id
  route_table_id = aws_route_table.app.id
}

resource "aws_route_table_association" "app_b" {
  subnet_id = aws_subnet.app_b.id
  route_table_id = aws_route_table.app.id
}

resource "aws_route_table" "db" {
  vpc_id = aws_vpc.main.id
  tags = { Name = "${var.project_name}-db-rt" }
}

resource "aws_route_table_association" "db_a" {
  subnet_id = aws_subnet.db_a.id
  route_table_id = aws_route_table.db.id
}

resource "aws_route_table_association" "db_b" {
  subnet_id = aws_subnet.db_b.id
  route_table_id = aws_route_table.db.id
}
